# flame-data

./: .gitignore  LICENSE  Procfile  README.md  TODO  api.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
api/: api.py  database.sql
flame-data-api/: activate.sh  api.py  database.sql  pyproject.toml
flame-data-api/flame_data_api/: __init__.py  app.py  chem.py  constants.py  db.py  query.py  utils.py
flame-data-frontend/: package-lock.json  package.json  vite.config.js
flame-data-frontend/src/components/: App.jsx  CollectionsMenu.jsx  DetailGeometry.jsx  DetailItem.jsx  ReactionModeSelector.jsx  ViewFrame.jsx  ViewSpeciesFromSmiles.jsx
flame-data-frontend/src/pages/: LoginPage.jsx
flame-data-frontend/src/utils/: utils.jsx
flame_data/: __init__.py  _app.py  app.py  chem.py  db.py  query.py  utils.py
flame_data_api/: __init__.py  app.py  db.py  query.py
src/: main.css  main.jsx
src/components/: App.jsx  BinarySelector.jsx  CollectionsMenu.jsx  DeleteButton.jsx  DetailGeometry.jsx  DetailItem.jsx  DetailStats.jsx  DisplayItem.jsx  DisplayList.jsx  DrawSpecies2DFromSmiles.jsx  FormattedFormula.jsx  Header.jsx  Layout.jsx  Molecule2DView.jsx  PopupButton.jsx  SideCart.jsx  SmilesEntryForm.jsx  SmilesEntryFormInput.jsx  SpeciesDetailItem.jsx  SpeciesGroup.jsx  SpeciesItem.jsx  SpeciesList.jsx  StatusTable.jsx  SubmissionStatusTable.jsx  ViewFrame.jsx  ViewReactionFromSVG.jsx  ViewSpecies2D.jsx  ViewSpeciesFromSVG.jsx  ViewSpeciesFromSmiles.jsx  ViewSpeciesFromXYZ.jsx
src/pages/: DetailPage.jsx  FormPage.jsx  HomePage.jsx
src/state/: actions.js  store.js
src/utils/: utils.js  utils.jsx
