[tool.poetry]
name = "flame-data-api"
version = "0.1.0"
description = ""
authors = ["Andreas Copan <avcopan@gmail.com>"]
readme = "README.md"
packages = [{include = "flame_data_api"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
python-dotenv = "^1.0.0"
psycopg = "^3.1.9"
flask-bcrypt = "^1.0.1"
flask-session = "^0.5.0"
flask-cors = "^4.0.0"
flask-sqlalchemy = "^3.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
